--- a/app/views/message_threads/index.html.haml
+++ b/app/views/message_threads/index.html.haml
@@ -5,4 +5,6 @@
     %li
       = link_to thread.subject, thread
       %span.count= pluralize thread.messages.count, 'message'
+
+= paginate @threads
       
