--- a/app/views/message_threads/show.html.haml
+++ b/app/views/message_threads/show.html.haml
@@ -1,5 +1,9 @@
 = link_to "back", message_threads_path
 
+%hr
+
 - @thread.messages.each do |message|
   .message{id: message.id}
+    = link_to "next message", "#end_of_#{message.id}"
     = render :partial => "messages/message", :object => message
+    %a{name: "end_of_#{message.id}"}
