--- a/app/views/contacts/show.html.haml
+++ b/app/views/contacts/show.html.haml
@@ -1,5 +1,7 @@
 %h2.name= @contact.name
-%h2.email= @contact.email
+%h3.email= @contact.email
+
+=link_to "Edit", edit_contact_path(@contact)
 
 %h2 Messages
 
