--- a/app/views/messages/_message.html.haml
+++ b/app/views/messages/_message.html.haml
@@ -1,14 +1,14 @@
 %h3.date= message.date.to_s(:long)
 %h3.to
   To:
-  = message.to.map { |to| link_to(to.email, to) }.join(", ").html_safe
+  = message.to.map { |to| link_to(to.display_name, to) }.join(", ").html_safe
 %h3.from
   From:
-  = link_to message.from.email, message.from
+  = link_to message.from.display_name, message.from
 - if message.cc
   %h3.cc
     CC:
-    = message.cc.map { |cc| link_to(cc.email, cc) }.join(", ").html_safe
+    = message.cc.map { |cc| link_to(cc.display_name, cc) }.join(", ").html_safe
 
 - if message.multipart?
   - message.parts.each do |part|
