--- a/app/views/contacts/show.html.haml
+++ b/app/views/contacts/show.html.haml
@@ -1,12 +1,21 @@
-%h2.name= @contact.name
-%h3.email= @contact.email
+%section
+  %h2.name= @contact.name
+  %h4.email= @contact.email
 
-=link_to "Edit", edit_contact_path(@contact)
+  =link_to "Edit", edit_contact_path(@contact)
 
-%h2 Messages
+%section
+  .row
+    .span16
+      %h3 Messages
 
-%ul
-- @contact.messages.each do |message|
-  %li
-    %span.timestamp= message.date.to_s(:full)
-    = link_to message.subject, message.message_thread
+      %ul.messages.unstyled
+        - @messages.each do |message|
+          %li.row
+            %span.timestamp.span3= message.date.to_s(:long)
+            = link_to message.subject, message.message_thread, {:class => "subject span10"}
+            %span.contacts.span3
+              = (message.contacts - [@contact]).map { |c| link_to c.display_name, c }.to_sentence.html_safe
+
+
+  = paginate @messages
