Display date and sender for each message.

--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -1,5 +1,9 @@
 <ul>
   <% @messages.each do |message| %>
-    <li><%= message.subject %></li>
+    <li class="message">
+      <span class="date"><%= message.date.strftime("%Y-%m-%D %H:%M:%S") %></span>
+      <span class="subject"><%= message.subject %></span>
+      <span class="sender"><%= message.from.first %></span>
+    </li>
   <% end %>
 </ul>
