--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -4,8 +4,8 @@
   <% @messages.each do |message| %>
     <li class="message">
       <span class="date"><%= message.date.strftime("%Y-%m-%D %H:%M:%S") %></span>
-      <span class="subject"><%= message.subject %></span>
-      <span class="sender"><%= message.from.first %></span>
+      <span class="subject"><%= link_to message.subject, message_path(message) %></span>
+      <span class="sender"><%= message.from %></span>
     </li>
   <% end %>
 </ul>
