Don't display the headers on the messages#show page.
Showing *only* the body of the message is the simplest way to hide the
headers, for now.

We've changed the 'message' stub in the '#show finds message via
repository' test as we didn't want to have to add a body attribute to
it, and all we care about is that the message stub ends up in the
@message instance variable in our controller.

--- a/app/views/messages/show.html.erb
+++ b/app/views/messages/show.html.erb
@@ -3,6 +3,6 @@
 <li><%= @message.date %></li>
 <li><%= @message.from %></li>
 </ul>
-<pre>
-<%= @message.original.to_s %>
+<pre class="body">
+<%= @message.body %>
 </pre>
