Use an identifier to load a Message which isn't the UID of a single Mail
We considered a few approaches, including extracting a Message record
for storage in the database, but decided that the simplest incremental
change was to use a simple identifier that was still stored against the
index record for each Mail.

Some Mails don't have Message IDs (mostly or possibly all from Pivotal
Tracker, where the mail headers contain a blank line that confuses the
Mail gem), so where that does not have a value, we use the sender, date
and subject to generate a stable identifier for the Message.

--- a/app/views/messages/show.html.erb
+++ b/app/views/messages/show.html.erb
@@ -1,11 +1,11 @@
 <ul>
-<li><%= @message.subject %></li>
-<li><%= @message.date %></li>
-<li><%= @message.from %></li>
+<li class="subject"><%= @message.subject %></li>
+<li class="date"><%= @message.date %></li>
+<li class="from"><%= @message.from %></li>
 </ul>
 <pre class="body">
 <%= @message.body %>
 </pre>
 <!---
-  <%= @message.original.to_s %>
+  <%= @message.raw_message %>
 --->
