Add a tiny amount of styling to make it easier on the eye.
Bootstrap is a quick way to start. We're not using the asset pipeline
because it doesn't work well with Recap (yet) - see
dd3a56af7c64a19db0d4ddb39baf1b342a893a07 for more information.

Once we get the asset pipeline running, we can use it to generate our
CSS instead.

--- a/app/views/messages/show.html.erb
+++ b/app/views/messages/show.html.erb
@@ -1,19 +1,17 @@
 <div class="message">
-  <ul>
-  <li class="subject"><%= @message.subject %></li>
-  <li class="date"><%= @message.date %></li>
-  <li class="from"><%= @message.from %></li>
-  <li>
-    <ul class="recipients">
+  <h1 class="subject"><%= @message.subject %></h1>
+  <dl class="dl-horizontal">
+    <dt>From</dt><dd class="from"><%= @message.from %></dd>
+    <dt>Date</dt><dd class="date"><%= @message.date %></dd>
+    <dt>Recipients</dt><dd class="recipients">
+      <ul>
       <% @message.recipients.each do |recipient| %>
         <li class="recipient"><%= recipient %></li>
       <% end %>
-    </ul>
-  </li>
-  </ul>
-  <pre class="body">
-  <%= @message.body %>
-  </pre>
+      </ul>
+    </dd>
+  </dl>
+  <pre class="body"><%= @message.body %></pre>
 </div>
 
 <!--
