--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -1,11 +1,13 @@
 <h1>Messages</h1>
 
+<p id="session">Logged in as <span class="username"><%= current_username %></span></p>
+
 <ul>
   <% @messages.each do |message| %>
-    <li class="message">
+    <%= content_tag(:li, class: message_class(message, current_username)) do %>
       <span class="date"><%= message.date %></span>
       <span class="subject"><%= link_to message.subject, message_path(message) %></span>
       <span class="sender"><%= message.from %></span>
-    </li>
+    <% end %>
   <% end %>
 </ul>
