--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,9 @@
 <body>
 
 <div class="container">
+
+  <p id="session">Logged in as <span class="username"><%= current_username %></span></p>
+
   <%= yield %>
 </div>
 
