Highlight unreceived messages with a flag instead of bold text.
We think this is slightly better than making the whole message bold.
Bold messages imply some idea of 'unread' rather than unreceived.
There's obviously *lots* of room for improvement.

--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -2,6 +2,13 @@ body {
   padding-top: 20px;
 }
 
-.message.not-received {
-  font-weight: bold;
+ul#messages {
+  list-style: none;
+  margin-left: 0;
+}
+.icon-flag {
+  margin-left: -18px;
+}
+.message.received .icon-flag {
+  display: none;
 }
