--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -1,8 +1,9 @@
 <h1>Messages</h1>
 
-<ul>
+<ul id="messages">
   <% @messages.each do |message| %>
     <%= content_tag(:li, class: message_class(message, current_username)) do %>
+      <i class="icon-flag" title="You haven't received this message"></i>
       <span class="date"><%= message.date %></span>
       <span class="subject"><%= link_to message.subject, message_path(message) %></span>
       <span class="sender"><%= message.from %></span>
