Search should handle empty queries, and show previous search term

--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -1,7 +1,7 @@
 <h1>Messages</h1>
 <%= form_tag search_messages_url, method: :get do %>
 <%= label_tag :q, 'Search' %>
-<%= text_field_tag :q %>
+<%= text_field_tag :q, params[:q] %>
 <%= submit_tag 'Search' %>
 <% end %>
 <ul id="messages">
