Explain why there are no messages/conversations in a list.
Also ensure valid HTML by not adding empty <ul> elements.

--- a/app/views/messages/search.html.erb
+++ b/app/views/messages/search.html.erb
@@ -1,2 +1,4 @@
 <h1>Messages matching '<%= params[:q] %>'</h1>
-<%= render partial: 'list' %>
+<%= ul(@messages, id: 'messages', empty_list: 'No messages were found') do |message| %>
+  <%= render partial: 'message', object: message %>
+<% end %>
