--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -1,2 +1,4 @@
 <h1>Messages</h1>
-<%= render partial: 'list' %>
+<%= ul(@messages, id: 'messages', empty_list: 'No messages were found') do |message| %>
+  <%= render partial: 'message', object: message %>
+<% end %>
