Show messages properly.

--- a/app/views/messages/_message.html.erb
+++ b/app/views/messages/_message.html.erb
@@ -1,6 +1,20 @@
-<%= content_tag(:li, class: message_class(message, current_username)) do %>
-  <i class="icon-flag" title="You haven't received this message"></i>
-  <span class="date"><%= message.date %></span>
-  <span class="subject"><%= link_to message.subject, message_path(message) %></span>
-  <span class="sender"><%= message.from %></span>
-<% end %>
+<h1 class="subject"><%= message.subject %></h1>
+<dl class="dl-horizontal">
+  <dt>From</dt><dd class="from"><%= message.from %></dd>
+  <dt>Date</dt><dd class="date"><%= message.date %></dd>
+  <dt>To</dt><dd class="to">
+    <ul>
+    <% message.to.each do |recipient| %>
+      <li class="to"><%= recipient %></li>
+    <% end %>
+    </ul>
+  </dd>
+  <dt>Recipients</dt><dd class="recipients">
+    <ul>
+    <% message.recipients.each do |recipient| %>
+      <li class="recipient"><%= recipient %></li>
+    <% end %>
+    </ul>
+  </dd>
+</dl>
+<pre class="body"><%= message.body %></pre>
