--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -1,4 +1,4 @@
 <h1>Messages</h1>
 <%= ul(@messages, id: 'messages', empty_list: 'No messages were found') do |message| %>
-  <%= render partial: 'message', object: message %>
+  <%= render partial: 'message_summary', object: message, as: 'message' %>
 <% end %>
