--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,9 @@
   <div class="navbar-inner">
     <div class="container">
       <%= link_to "Sauron", root_url, class: 'brand' %>
-      <span class="navbar-text" id="session">Logged in as <span class="username"><%= current_username %></span></span>
+      <ul class="nav">
+        <li><%= link_to "Conversations", conversations_path %></li>
+      </ul>
       <%= form_tag search_messages_url, method: :get, class: "navbar-search pull-right" do %>
         <%= label_tag :q, 'Search' %>
         <%= text_field_tag :q, params[:q], class: 'search-query', placeholder: 'Search messages...' %>
@@ -20,6 +22,7 @@
   </div>
 </div>
 <div class="container">
+  <p id="session">Logged in as <span class="username"><%= current_username %></span></p>
   <%= yield %>
 </div>
 
